--- a/app/assets/stylesheets/graphs.css.scss
+++ b/app/assets/stylesheets/graphs.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Graphs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.thumb_list {
+  width: 820px;
+}
+
+.thumb_col {
+  float: left;
+  border: solid 2px #D9DFDF;
+  width: 200px;
+  height: 130px;
+  margin-right: 1px;
+}
+
+.font12 {
+  font-size: 14px;
+}
