--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,9 +19,9 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #04C;
   &:visited {
-    color: #666;
+    color: forestGreen;
   }
   &:hover {
     color: #fff;
