--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,25 +1,29 @@
 <h1>Listing graphs</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @graphs.each do |graph| %>
-  <tr>
-    <td><%= graph.title %></td>
-    <td><%= graph.description %></td>
-    <td><%= link_to 'Show', graph %></td>
-    <td><%= link_to 'Edit', edit_graph_path(graph) %></td>
-    <td><%= link_to 'Destroy', graph, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
 <%= link_to 'New Graph', new_graph_path %>
+
+<div class="thumb_list">
+<% @graphs.each_with_index do |graph, i| %>
+<% if i == 0 %>
+<div>
+<% end %>
+  <div class="thumb_col">
+    <p>
+    <%= graph.created_at %>
+    </p>
+    <p class="font12">
+    <%= link_to graph.title, graph %>
+    </p>
+    <p>
+    <%= graph.description %>
+    </p>
+    <%= link_to 'Show', graph %>
+    <%= link_to 'Edit', edit_graph_path(graph) %>
+    <%= link_to 'Destroy', graph, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </div>
+<% if i != 0 && i % 3 == 0 %>
+</div>
+<div>
+<% end %>
+<% end %>
+</div>
