add chart_type select tag

--- a/app/views/graphs/show.html.erb
+++ b/app/views/graphs/show.html.erb
@@ -1,5 +1,24 @@
+<%= javascript_include_tag "change_chart_type" %>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
+
+document.addEventListener('DOMContentLoaded', function() {
+  select = document.getElementById('chart_type')
+  select.addEventListener('change', function() {
+    var chart;
+    if (select.selectedIndex == 0) {
+      chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+    } else if (select.selectedIndex == 1) {
+      chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+    } else {
+      chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+    }
+    chart.draw(data, {width: 400, height: 240});
+  });
+}, false);
+
+var data;
+
 // Load the Visualization API and the piechart package.
 google.load('visualization', '1', {'packages':['corechart']});
   
@@ -14,12 +33,13 @@ function drawChart() {
       }).responseText;
       
   // Create our data table out of JSON data loaded from server.
-  var data = new google.visualization.DataTable(jsonData);
+  data = new google.visualization.DataTable(jsonData);
 
   // Instantiate and draw our chart, passing in some options.
   var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
   chart.draw(data, {width: 400, height: 240});
 }
+
 </script>
 
 <p id="notice"><%= notice %></p>
@@ -33,8 +53,10 @@ function drawChart() {
   <b>Description:</b>
   <%= @graph.description %>
 </p>
+<%= select_tag(:chart_type, options_for_select([['Pie', 1], ['Bar', 2], ['Line', 3]])) %>
 
 <div id="chart_div"></div>
 
+<%= link_to 'json', :controller => "graph_data", :action => "show", :id => @graph.id %>
 <%= link_to 'Edit', edit_graph_path(@graph) %> |
 <%= link_to 'Back', graphs_path %>
