--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,31 +1,24 @@
 <h1>Listing graphs</h1>
 
-<%= link_to 'New Graph', new_graph_path %>
-
-<div class="thumb_list">
-<% @graphs.each_with_index do |graph, i| %>
-<% if i == 0 %>
-<div>
-<% end %>
-  <div class="thumb_col">
-    <p>
-    <%= graph.created_at %>
-    </p>
-    <p class="font12">
-    <%= link_to graph.title, graph %>
-    </p>
-    <p>
-    <%= graph.description %>
-    </p>
-    <%= link_to 'Show', graph %>
-    <%= link_to 'Edit', edit_graph_path(graph) %>
-    <%= link_to 'Destroy', graph, method: :delete, data: { confirm: 'Are you sure?' } %>
-  </div>
-<% if i != 0 && i % 3 == 0 %>
-</div>
-<div>
-<% end %>
-<% end %>
+<ul class="thumbnails">
+  <% @graphs.each_with_index do |graph, i| %>
+    <li class="span3">
+      <div class="thumbnail">
+        <p>
+        <%= graph.created_at %>
+        </p>
+        <p class="font12">
+        <%= link_to graph.title, graph %>
+        </p>
+        <p class="graph_desc">
+        <%= graph.description %>
+        </p>
+        <%= link_to 'Show', graph %>
+        <%= link_to 'Edit', edit_graph_path(graph) %>
+        <%= link_to 'Destroy', graph, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    </li>
+  <% end %>
 </div>
 
 <%= will_paginate @graphs %>
