add graph preview function

--- a/app/assets/stylesheets/graphs.css.scss
+++ b/app/assets/stylesheets/graphs.css.scss
@@ -17,3 +17,12 @@
   clear:both;
   padding: 20px 0;
 }
+
+.description_field {
+  height: 200px;
+  width: 400px;
+}
+
+.data_field {
+  width: 350px;
+}
