--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing graphs</h1>
 
 <ul class="thumbnails">
-  <% @graphs.each_with_index do |graph, i| %>
+  <% @graphs.each_with_index do |graph| %>
     <li class="span3">
       <div class="thumbnail">
         <p>
