--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
           <%= link_to "Gbase", root_path, :class => "brand" %>
           <div class="container nav-collapse">
             <ul class="nav">
+              <li><%= link_to "about", about_path  %></li>
               <li><%= link_to "new graph", new_graph_path  %></li>
               <li><%= link_to "contact", ""  %></li>
               <li>
