--- a/app/views/graphs/show.html.erb
+++ b/app/views/graphs/show.html.erb
@@ -32,6 +32,11 @@ function drawChart() {
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>CreatedAt:</b>
+  <%= @graph.created_at %>
+</p>
+
+<p>
   <b>Title:</b>
   <%= @graph.title %>
 </p>
