--- a/app/views/graphs/_form.html.erb
+++ b/app/views/graphs/_form.html.erb
@@ -42,7 +42,7 @@ function previewChart() {
     <%= f.label :data %><br />
     <%= f.text_area :data, :class => 'data_field' %>
   </div>
-  ※フォーマットについては<%= link_to "こちら", "https://developers.google.com/chart/interactive/docs/datatables_dataviews?hl=ja#javascriptliteral" %>を参照してください.
+  ※Please refer<%= link_to " this site ", "https://developers.google.com/chart/interactive/docs/datatables_dataviews?hl=ja#javascriptliteral" %>about data format.
 
   <div class="actions">
     <%= f.submit %>
