use unicorn via procfile
setting smtp

add user address to contact mail view

change smtp setting

--- a/app/views/contact_mailer/contact_email.text.erb
+++ b/app/views/contact_mailer/contact_email.text.erb
@@ -1,6 +1,9 @@
 User send contact email
 ----------------------------------
 
+address:
+<%= @user[:user][:address] %>
+
 name:
 <%= @user[:name] %>
 
